@@ -144,11 +144,6 @@ class MultiPredicate(object):
         return result
 
     def key_by_predicate_name(self, d):
-        input_names = set(d.keys())
-        if not self.predicate_names.issuperset(input_names):
-            unknown_keys = input_names.difference(self.predicate_names)
-            raise KeyError("Unknown names in key dict: %s" %
-                           ', '.join(unknown_keys))
         result = []
         for predicate in self.predicates:
             result.append(predicate.key_by_predicate_name(d))
