@@ -4,8 +4,10 @@ CHANGES
 0.9.2 (unreleased)
 ==================
 
-- Nothing changed yet.
-
+- Reg was a bit too strict; when you had multiple (but not single)
+  predicates, Reg would raise KeyError when you put in an unknown
+  key. Now they're just being silently ignored, as they don't do any
+  harm.
 
 0.9.1 (2014-11-11)
 ==================
